This time atleast some logic works :) fix A4 page size, implement certain types and categories

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 :host {
-    --height: 11.7in;
-    --width: 8.3in;
+    --height: 11.69in;
+    --width: 8.27in;
     --margin: 0.25in;
 
-    --primary: #214354;
+    --primary: #7A7AB8;
     --text-primary: #FFFFFF;
 }
