--- a/src/app/edit/edit.component.css
+++ b/src/app/edit/edit.component.css
@@ -6,9 +6,11 @@
     height: 100vh;
     right: var(--width);
 
+    overflow: auto;
+
     background-color: var(--primary);
     color: var(--text-primary);
     user-select: none;
 
-    padding: 0.3in 0 0 0.3in;
+    padding: 0.3in 0.3in 0 0.3in;
 }
