--- a/src/app/type/text/text.component.html
+++ b/src/app/type/text/text.component.html
@@ -1,4 +1,5 @@
 <ng-template [ngIf]="data.type == 'text'">
-    <input type="text" size="6" disabled value="{{id}}" />
-    <input type="{{data.type}}" value="{{data.value}}" step="0.25" [(ngModel)]="data.value">
+    <input type="text" size="12" disabled value="{{data.name}}" />
+    <input type="text" [(ngModel)]="data.value">
+    <br />
 </ng-template>
