--- a/src/app/view/view.component.css
+++ b/src/app/view/view.component.css
@@ -1,8 +1,9 @@
-:host {
+app-root>:host {
     position: absolute;
 
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: 56px;
 
     top: 0;
     right: 0;
@@ -13,4 +14,8 @@
 
     /* background-color: #666666; */
     cursor: pointer;
+}
+
+:host app-view {
+    display: contents;
 }
